--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,6 +8,10 @@ h1 {
     font-family: "Roboto Condensed", sans-serif;
 }
 
+h2 {
+    font-family: "Roboto Condensed", sans-serif;
+}
+
 * {
     padding: 0;
     margin: 0;
