--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,6 +11,9 @@ h1 {
 h2 {
     font-family: "Roboto Condensed", sans-serif;
 }
+p {
+    font-family: "Spline Sans", sans-serif;
+}
 
 * {
     padding: 0;
@@ -77,7 +80,7 @@ header {
     font-family: arial;
 }
 
-.price {
+.precio {
     color: grey;
     font-size: 22px;
 }
@@ -106,4 +109,44 @@ img {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+}
+
+.item {
+    display: flex;
+    flex-flow: row wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1.5rem;
+    width: fit-content;
+    padding: 2rem;
+    margin: 2rem;
+    background: white;
+    box-shadow: -2px 2px 7px 0px rgba(0, 0, 0, 0.75);
+    text-transform: uppercase;
+}
+
+.itemText {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-self: flex-start;
+    row-gap: 1rem;
+    padding: 1rem;
+}
+
+.boton {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+}
+
+.button:hover {
+    opacity: 0.7;
 }
